--- a/composer.json
+++ b/composer.json
@@ -15,14 +15,14 @@
         "symfony/dotenv": "*",
         "symfony/expression-language": "*",
         "symfony/flex": "^1.6",
-        "symfony/form": "*",
+        "symfony/form": "5.0.*",
         "symfony/framework-bundle": "*",
         "symfony/http-client": "*",
         "symfony/intl": "*",
         "symfony/mailer": "*",
         "symfony/monolog-bundle": "^3.1",
         "symfony/notifier": "*",
-        "symfony/orm-pack": "*",
+        "symfony/orm-pack": "^1.0",
         "symfony/process": "*",
         "symfony/security-bundle": "*",
         "symfony/serializer-pack": "*",
@@ -37,7 +37,7 @@
     },
     "require-dev": {
         "symfony/debug-pack": "*",
-        "symfony/maker-bundle": "^1.0",
+        "symfony/maker-bundle": "^1.15",
         "symfony/profiler-pack": "*",
         "symfony/test-pack": "*"
     },
