--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dependencies": {
         "bootstrap-autocomplete": "^2.3.3",
         "chart.js": "^2.9.3",
+        "copy-webpack-plugin": "^5.1.1",
         "jquery": "^3.4.1",
         "jquery-ui": "^1.12.1",
         "popper.js": "^1.16.1"
