--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "components/font-awesome": "^5.12",
         "jwilsson/spotify-web-api-php": "^3.0",
         "sensio/framework-extra-bundle": "^5.5",
+        "symfony/apache-pack": "^1.0",
         "symfony/asset": "*",
         "symfony/console": "*",
         "symfony/dotenv": "*",
