--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "symfony/form": "5.0.*",
         "symfony/framework-bundle": "*",
         "symfony/http-client": "*",
-        "symfony/intl": "*",
+        "symfony/intl": "5.0.*",
         "symfony/mailer": "*",
         "symfony/monolog-bundle": "^3.1",
         "symfony/notifier": "*",
