--- a/composer.json
+++ b/composer.json
@@ -84,7 +84,7 @@
     },
     "extra": {
         "symfony": {
-            "allow-contrib": false,
+            "allow-contrib": true,
             "require": "5.0.*"
         }
     }
